<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter your code.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="about_mail">Contact:</string>
    <string name="about_site">Website:</string>
    <string name="about_us">About us</string>
    <string name="allow_root">Allow root installation</string>
    <string name="aptoide_email">aptoide@aptoide.com</string>
    <string name="aptoide_url">http://www.aptoide.com/</string>
    <string name="backup_apps">Backup Apps</string>
    <string name="cancel">Cancel</string>
    <string name="change_theme">Change theme</string>
    <string name="change_theme_soon">Coming soon</string>
    <string name="clear_cache_summary">Deletes icons, images, apk downloaded, obb, webservice data, …</string>
    <string name="clearcache_title">Clear Storage</string>
    <string name="comment">Comment</string>
    <string name="create_store_displayable_explore_button">Explore</string>
    <string name="create_store_displayable_explore_message">Enter and explore all the possibilities</string>
    <string name="download_retry">Retry</string>
    <string name="drawer_social_media_title">"Let's stay connected"</string>
    <string name="error503">Ufff… Is it just me or is everyone installing apps at the same time?</string>
    <string name="excluded_updates">Excluded Updates</string>
    <string name="facebook">Facebook</string>
    <string name="feedback_send_button">Send Feedback</string>
    <string name="follow">Follow</string>
    <string name="having_some_trouble">Having some trouble. Can you retry later?</string>
    <string name="include_system_apps_summary">"Checking this, you will be notified of system apps (apps that were installed by the device's manufacturer) updates"</string>
    <string name="include_system_apps_title">Include system apps</string>
    <string name="insert_store_name">Insert store name:</string>
    <string name="my_account">My Account</string>
    <string name="my_store_created_displayable_message">Your Android App store</string>
    <string name="order_popup_title3">Adult Content</string>
    <string name="rate">Rate</string>
    <string name="remote_install_menu_title">Install on TV</string>
    <string name="review_optional">Review (optional)</string>
    <string name="rollback">Rollback</string>
    <string name="root">Root</string>
    <string name="schDwnBtn">Schedule Download</string>
    <string name="search">Search</string>
    <string name="search_other_stores">Or search for others…</string>
    <string name="see_top_stores">See Top Stores</string>
    <string name="set_mature_pin_summary">Set a Pin that will be required to unlock adult Content</string>
    <string name="set_mature_pin_title">Set Adult Content pin</string>
    <string name="setting_appfiltersum">"Don't show applications that are not compatible with this device"</string>
    <string name="setting_appfiltertitle">Filter Applications</string>
    <string name="setting_auto_update_sum">Enable applications automatic update</string>
    <string name="setting_auto_update_title">Enable auto update</string>
    <string name="setting_clear_memory">Storage</string>
    <string name="setting_dont_show_mature_content">Show mature content</string>
    <string name="setting_general_download_rules">General Download Rules</string>
    <string name="setting_hwspecssum">Hardware Info about your phone</string>
    <string name="setting_hwspecstitle">Hardware Specs</string>
    <string name="setting_mature_filtering">Adult Content</string>
    <string name="setting_mobile">Mobile 3G/4G</string>
    <string name="setting_schdwninstallsum">Install scheduled downloads automatically when a WiFi connection is present</string>
    <string name="setting_schdwninstalltitle">Automatic Install</string>
    <string name="setting_schdwntitle">Scheduled Downloads</string>
    <string name="setting_updates">Updates</string>
    <string name="setting_updates_notification_sum">Show new updates notifications</string>
    <string name="setting_updates_notification_title">Updates Notification</string>
    <string name="setting_wifi">WiFi</string>
    <string name="settings">Settings</string>
    <string name="settings_maxFileCache_sum">Set a maximum size to keep your apk files</string>
    <string name="settings_maxFileCache_title">Download File Cache (MB)</string>
    <string name="settings_title_bar">Settings</string>
    <string name="share">Share</string>
    <string name="store_name">Store Name</string>
    <string name="tap_a_star">Tap a star to rate</string>
    <string name="title">Title</string>
    <string name="twitter">Twitter</string>
    <string name="uninstall">Uninstall</string>
    <string name="updates_filter_setting_title">Just show me stable app version updates</string>
    <string name="updates_filter_summary">Checking this, you won’t be notified of beta versions.</string>
    <string name="upload_dialog_gallery">Select from gallery</string>
    <string name="upload_dialog_photo">Take new Photo</string>
    <string name="upload_dialog_title">Upload Photo</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="setting_category_autoupdate">%s Auto update</string>
    <string name="setting_category_autoupdate_title">Enable %s auto update</string>
    <string name="create_store_displayable_created_store_message">"You've just created your Store!"</string>
    <string name="credits">" \u0009Aptoide Team:

 \u0009\u0009 "<a href="http://www.aptoide.com/page/about">http://www.aptoide.com/page/about</a>" 

 \u0009Source code &amp; contributions:

 \u0009\u0009 "<a href="https://github.com/aptoide">https://github.com/aptoide</a>" 

 \u0009Thank you to our Translators Team:

 Albanian: Eni Çuçka 
 Arabic: Esraa Abdullah | Zuheir Sharafeldin | Ahmed Sami | ذوالفقار الزاملي | Yassine Nacer | Manaa Alshihe | Mohamed Gorrab | Mohamed Al-Oraibi | Mohamad Kalaaji | Omarioamriky | Ahmed Teailab | Ali | Ahmed Teailab | Mariam Jomha
 Asturian: Enol P.
 Bengali:Md Rokunuzzaman
 Bosnian/Serbian: Rijad Spahic | Toni Grubisic
 Burmese: Nyein Chan | Ko Nyi | Yaminn
 Catalan: Francisco Villalba Segarra | Marc Bres Gil 
 Central Khmer: Sreang Sreng
 Chinese (Trad): Ivanniu
 Chinese (Simp): ChuChangMing | Junying Li | Theodore Wte | Xue Yao
 Croatian: Rijad Spahic | Toni Grubisic | Roko Jurjevic
 Czech: Zanna Blinova | Michal Čihař | Jirka Daněk | Jan Krumpholc | Matej Kolarević
 Dutch: Shane KloostermaXBOXn | Jehan Bont | Ismail Gürol Celiktas | Stefan de Jong | Nathan Follens
 Estonian: Kristjan Räts | Kristjan Räts
 Filipino: Melvin Melchor A. Leal | Darwin Del Rosario
 Finnish: Sami “6sto” Kuusisto | Allu Saarinen | Lari Oesch
 French: Ldm Public | Guillaume NV | Ultrapeer | Damien Mallard | Alexis Bonvin | Dominique Baume | Ldm Public
 Georgian: Sandro Kakabadze 
 German: Alexander Dommnich | Manuel Stroh | Marlon Bruske | Benny La | Simon Grabert | Robert Reep | Martin Nehrdich | Michael Mayer | Lionel Wyser | Kevin Pang | Mika Holste | Thomas Numberger
 Greek: Basileios Pitas | Alex Kalles
 Hebrew: שלו מויאל | David Liron | shiranbfree | Yaron Shahrabani
 Hindi: Gaurav | Amar Singh | Asad Sayyed
 Indonesian: Adi Juarsa | Asep Muhajir | Dwiko Lukito
 Italian: Gabriele Dal Pino | Elisa Bruno | Rapper Skull | Arshdeep Singh | Pavo Baxter | Gabry Carne | Simili Giuseppe | Damiano Chiacchiaretta | Marta Penone | Marta Pini | Anna Russillo
 Japanese: Nana Wakasugi | Naofum
 Korean: JCKim | KevinPark
 Kurdish: Rasti K5
 Lao: Vilaphonh Chanthalavong
 Lithuanian: Saulius Pranckevicius | Titus Virbickas | Ruta Sipkauskaite | Tadas Preisegolavicius
 Malay: Tan Say Lee | Zamimi Omar
 Marathi: Rishikesh Wavdekar
 Persian: Mehrdad Allahkarami 
 Polish: Michał VonFlynee | Trurl | Artur Stempkowski | Stanislaw | Tomasz Gregorczyk | Paweł Zmarzły
 Portuguese (Brazil): Tobias Alencastro | Caio Fonseca | Juanito Silva | Paulo Henrique | Marchus Santos | Maurilio Filho | Edu Salgado | Vinicio Henrique | Lígia de Paula Santos | Bruno Ribeiro 
 Portuguese (Portugal): Joao Redondo | Tomé Mendes Ligia de Paula Santos
 Punjabi: Navdeep Singh
 Romanian: Munteanu Ovidiu | Heim Bogdan | Tudor Bobei | Alina Ivanov
 Russian: Anton Tkachenko | Leonid Bogolubov | Kanat Yesseyev | Ligia de Paula Santos | Sergey Kudelin | Dmitry
 Simplified Chinese: ivanniu | YFdyh000
 Spanish: Ana Barrera | Ronnie Simon | jvnski | Denis Arroyabe | Francisco Villalba Segarra | Jorge Conde | Pablo Cardozo | Luis Orellana | Alejandro Mata | Guillermo Mas Coll
 Thai: Duangkarn
 Turkish: Ultrapeer | Zeynal Zeynalov | Emre Tosunkaya | Nataliia | S. Cihan C.
 Ukrainian: Nataliia
 Vietnamese: Nguyen Minh Tri | Linh Pham
 "</string>
</resources>