<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_title_bar" android:key="root"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_general_download_rules">
        <CheckBoxPreference android:title="@string/setting_wifi" android:key="generalnetworkwifi" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/setting_mobile" android:key="generalnetworkmobile" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_hwspecstitle">
        <Preference android:title="@string/setting_hwspecstitle" android:key="hwspecs" android:summary="@string/setting_hwspecssum" />
        <CheckBoxPreference android:title="@string/setting_appfiltertitle" android:key="hwspecsChkBox" android:summary="@string/setting_appfiltersum" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_category_autoupdate" android:key="checkautoupdatecategory">
        <CheckBoxPreference android:title="@string/setting_category_autoupdate_title" android:key="checkautoupdate" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/order_popup_title3" android:key="adultContent">
        <CheckBoxPreference android:title="@string/setting_mature_filtering" android:key="matureChkBox" android:summary="@string/setting_dont_show_mature_content" android:defaultValue="true" />
        <Preference android:title="@string/set_mature_pin_title" android:key="Maturepin" android:summary="@string/set_mature_pin_summary" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_updates">
        <CheckBoxPreference android:title="@string/setting_updates_notification_title" android:key="showUpdatesNotification" android:summary="@string/setting_updates_notification_sum" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/setting_auto_update_title" android:key="auto_update" android:summary="@string/setting_auto_update_sum" />
        <CheckBoxPreference android:title="@string/updates_filter_setting_title" android:key="updatesFilterAlphaBetaKey" android:summary="@string/updates_filter_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/include_system_apps_title" android:key="updatesSystemAppsKey" android:summary="@string/include_system_apps_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_schdwntitle">
        <CheckBoxPreference android:title="@string/setting_schdwninstalltitle" android:key="schDwnBox" android:summary="@string/setting_schdwninstallsum" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_clear_memory">
        <Preference android:title="@string/clearcache_title" android:key="clearcache" android:summary="@string/clear_cache_summary" />
        <EditTextPreference android:maxLength="3" android:numeric="integer" android:title="@string/settings_maxFileCache_title" android:key="maxFileCache" android:summary="@string/settings_maxFileCache_sum" android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/change_theme" android:key="changetheme">
        <Preference android:title="@string/change_theme_soon" android:key="soon" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/root">
        <CheckBoxPreference android:title="@string/allow_root" android:key="allowRoot" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_us" android:key="about">
        <Preference android:title="@string/about_us" android:key="aboutDialog" />
    </PreferenceCategory>
</PreferenceScreen>