<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/insert_store_name" />
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <EditText android:id="@id/edit_store_uri" android:layout_width="wrap_content" android:layout_height="fill_parent" android:hint="@string/store_name" android:maxLines="1" android:singleLine="true" android:layout_toLeftOf="@id/button_dialog_add_store" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:inputType="textNoSuggestions|textUri" />
            <Button android:ellipsize="end" android:id="@id/button_dialog_add_store" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:text="@string/follow" android:singleLine="true" android:drawableLeft="?icAddStoreDrawable" android:drawablePadding="4.0dip" android:layout_alignParentRight="true" android:layout_centerHorizontal="true" android:drawableStart="?icAddStoreDrawable" style="?android:attr/segmentedButtonStyle" />
        </RelativeLayout>
        <View android:background="?separatorColor" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="10.0dip" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/search_other_stores" />
        <Button android:id="@id/button_top_stores" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/see_top_stores" style="?attr/customButton" />
    </LinearLayout>
</ScrollView>