<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="270.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/create_store_title_color" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="20.0dip" android:text="@string/upload_dialog_title" />
    <LinearLayout android:orientation="horizontal" android:id="@id/button_camera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_below="@id/title" android:layout_alignLeft="@id/button_gallery">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/upload_camera" />
        <TextView android:textSize="12.0sp" android:textColor="@color/create_store_title_color" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/upload_dialog_photo" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button_gallery" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="21.0dip" android:layout_marginTop="29.0dip" android:layout_below="@id/button_camera">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/upload_dialog_gallery" />
        <TextView android:textSize="12.0sp" android:textColor="@color/create_store_title_color" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/upload_dialog_gallery" android:maxLines="1" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="200.0dip" android:layout_marginTop="35.0dip" android:layout_marginBottom="20.0dip" android:text="@string/cancel" android:layout_below="@id/button_gallery" />
</RelativeLayout>