<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textColor="?colorPrimary" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" />
    <include layout="@layout/separator_horizontal" />
    <RatingBar android:layout_gravity="center" android:id="@id/rating_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:numStars="5" android:rating="3.0" android:stepSize="1.0" android:isIndicator="false" android:nextFocusForward="@id/input_title" style="@style/RatingBarReviewDialog" />
    <TextView android:textSize="@dimen/text_size_medium_small" android:textColor="@color/medium_custom_gray" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tap_a_star" />
    <android.support.design.widget.TextInputLayout android:id="@id/input_layout_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip">
        <EditText android:textSize="@dimen/text_size_medium" android:textColorHint="@color/black" android:ellipsize="end" android:gravity="start|center|top" android:id="@id/input_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title" android:maxLines="1" android:lines="1" android:nextFocusForward="@id/input_review" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/input_layout_review" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="@dimen/text_size_medium" android:textColorHint="@color/black" android:ellipsize="end" android:gravity="start|center|top" android:id="@id/input_review" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/review_optional" android:maxLines="6" android:lines="5" android:nextFocusForward="@id/input_review" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/text_size_medium" android:textColor="?colorPrimary" android:id="@id/rate_button" android:background="@null" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate" android:layout_alignParentRight="true" android:textAllCaps="true" />
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@color/app_view_gray" android:id="@id/cancel_button" android:background="@null" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="24.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/rate_button" android:textAllCaps="true" />
    </RelativeLayout>
</LinearLayout>