<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="center_horizontal" android:id="@id/generic_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/error1" />
        <TextView android:textStyle="bold" android:textColor="?customColor" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/error_text" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/error503" style="?android:textAppearanceMedium" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/error_text2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/having_some_trouble" style="?android:textAppearanceMedium" />
        <TextView android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/retry" android:background="@drawable/flat_selector" android:padding="5.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/download_retry" />
    </LinearLayout>
</ScrollView>