<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/widgetLayout" android:background="@drawable/dialog_bg_2" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
        <ImageView android:id="@id/store_icon" android:layout_width="63.0dip" android:layout_height="63.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/store_icon" android:layout_centerVertical="true">
            <TextView android:textSize="@dimen/text_size_medium_large" android:textStyle="bold" android:textColor="@color/white" android:id="@id/store_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/text_size_small" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_store_created_displayable_message" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/background_card_overlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/text_size_medium" android:textStyle="bold" android:textColor="@color/white" android:id="@id/created_store_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/create_store_displayable_created_store_message" />
        <TextView android:textSize="@dimen/text_size_medium" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/create_store_displayable_explore_message" android:layout_below="@id/created_store_text" />
        <Button android:textColor="@color/black" android:id="@id/explore_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_store_displayable_explore_button" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/StoreWhiteButton" />
    </RelativeLayout>
</LinearLayout>