<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_large" android:textColor="?colorPrimary" android:gravity="center|left" android:id="@id/title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" />
    <include android:visibility="gone" layout="@layout/separator_horizontal" />
    <android.support.design.widget.TextInputLayout android:id="@id/input_layout_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip">
        <EditText android:textSize="@dimen/text_size_medium" android:textColorHint="@color/app_view_gray" android:ellipsize="none" android:gravity="start|center|top" android:id="@id/input_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/write_your_comment" android:lines="4" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/text_size_medium" android:textColor="?colorPrimary" android:id="@id/comment_button" android:background="@null" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment" android:layout_alignParentRight="true" android:textAllCaps="true" />
        <Button android:textSize="@dimen/text_size_medium" android:textColor="@color/app_view_gray" android:id="@id/cancel_button" android:background="@null" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="24.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/comment_button" android:textAllCaps="true" />
    </RelativeLayout>
</LinearLayout>